--- a/templates/src/pages/storykeep/profile.astro
+++ b/templates/src/pages/storykeep/profile.astro
@@ -125,7 +125,7 @@ const gtag = import.meta.env.PUBLIC_GTAG || false;
 
   <!-- Initialize TractStack -->
   <script>
-    import { ProfileStorage } from '../utils/profileStorage';
+    import { ProfileStorage } from '../../utils/profileStorage';
 
     // Initialize consent toggle
     const consentToggle = document.getElementById(
